@@ -5,6 +5,6 @@ import gov.cdc.nbs.questionbank.exception.InternalServerException;
 
 public class ConditionInternalServerError extends InternalServerException{
     public ConditionInternalServerError(String id) {
-        super(String.format("There was an internal server error associated with id: %s", id));
+        super("There was an internal server error associated with id: %s".formatted(id));
     }
 }
